--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "appwrite": "^19.0.0",
+    "imer": "^0.0.1",
+    "immer": "^10.1.3",
     "next": "15.5.2",
     "node-appwrite": "^18.0.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
