--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.1",
+    "@types/canvas-confetti": "^1.9.0",
     "@uiw/react-md-editor": "^4.0.8",
     "appwrite": "^19.0.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "imer": "^0.0.1",
     "immer": "^10.1.3",
     "lucide-react": "^0.542.0",
+    "motion": "^12.23.12",
     "next": "15.5.2",
     "node-appwrite": "^18.0.0",
     "react": "19.1.0",
