latest questions debugging sesh

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-appwrite": "^18.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icon-cloud": "^4.1.7",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
